# ads1293-demo

./: Cargo.toml
examples/normal/: .gitignore  Cargo.toml  sdkconfig.defaults  settings.default.toml  tcp-problem.md
examples/normal-app/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
examples/normal-app/pages/: +Layout.tsx  +Page.tsx  +config.ts
examples/normal-app/pages/chart-demo/: +Page.tsx  +config.ts  demo.tsx
examples/normal-app/pages/chat-demo/: +Page.tsx
examples/normal-app/pages/index/: +Page.tsx
examples/normal-app/src/: App.tsx  config.ts
examples/normal-app/src-tauri/: Cargo.toml  _dev_things  rust-toolchain.toml  tauri.conf.json
examples/normal-app/src-tauri/src/: main.rs
examples/normal-data/: Cargo.toml
examples/normal-data/src/: lib.rs
examples/normal-server/: .gitignore  Cargo.toml  compose.yaml  rust-toolchain.toml  setup_dev_env.ps1  setup_dev_env.sh
examples/normal-server/_dev_things/: settings.toml
examples/normal-server/migration/: Cargo.toml
examples/normal-server/migration/src/: m20220101_000001_create_table.rs
examples/normal-server/src/: errors.rs  lib.rs  main.rs  service_broadcaster.rs  settings.rs  tests_utils.rs
examples/normal-server/src/actors/: data_hub.rs  data_processor.rs  data_pusher.rs  handler.rs  mod.rs  recipient.rs  service_broadcast_manager.rs  service_broadcaster.rs  websocket.rs
examples/normal-server/src/actors/data_hub/: actions.rs  handlers.rs  mod.rs  registration_keepers.rs
examples/normal-server/src/actors/data_processor/: actions.rs  handler.rs  id.rs  mod.rs  mutation.rs  neo.rs  saver.rs
examples/normal-server/src/actors/data_pusher/: actions.rs  handler.rs  id.rs  launched.rs  mod.rs
examples/normal-server/src/actors/interval/: mod.rs  watch_dog.rs
examples/normal-server/src/actors/udp/: decoder.rs  mod.rs
examples/normal-server/src/actors/udp_data_processor/: mod.rs
examples/normal-server/src/actors/websocket/: context.rs  mod.rs  processor.rs  subtask.rs  websocket_context.rs  websocket_handler.rs
examples/normal-server/src/actors/websocket/actor_context/: mod.rs  process_incoming_raw.rs
examples/normal-server/src/actors/websocket/neo/: mod.rs  process_incoming_raw.rs  websocket_context.rs
examples/normal-server/src/actors/websocket/processor/: actions.rs  before_launched.rs  mod.rs  processing_error.rs
examples/normal-server/src/entities/: data.rs  data_transaction.rs  mod.rs  prelude.rs
examples/normal-server/src/presets/: default_settings.toml
examples/normal-server/src/services/: data.rs  mod.rs  push_data.rs
examples/normal/.cargo/: config.toml
examples/normal/src/: communication.rs  data.rs  lib.rs  main.rs  settings.rs
examples/simple-blocking-example/: Cargo.toml  sdkconfig.defaults  settings.default.toml  settings.example.toml  settings.toml
examples/simple-blocking-example/.cargo/: config.toml
examples/simple-blocking-example/src/: application_modified_3_lead.rs  data.rs  device.rs  led.rs  lib.rs  main.rs  settings.rs  transport.rs  wifi.rs
examples/simple-blocking-example/src/transport/: mod.rs  udp.rs
src/driver/: initialization.rs  mod.rs  operator.rs
src/driver/registers/: access.rs  addressable.rs  data.rs  mod.rs
