[package]
name = "normal"
version = "0.1.0"
authors = ["Ghislaine Laios <laios54@pm.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false, features = [
    "experimental",
] }
ads1293-demo = { path = "../.." }
embassy-executor = "0.5.0"
embassy-futures = "0.1.1"
anyhow = "1.0.81"
serde = "1.0.197"
serde_json = "1.0.115"
config = { version = "0.14.0", default-features = false, features = [
    "toml",
    "convert-case",
] }
heapless = { version = "0.8.0", features = ["serde"] }
once_cell = "1.19.0"
url = "2.5.0"
embassy-sync = "0.5.0"
normal-data = { path = "../normal-data" }
esp-idf-sys = { version = "0.34.1" }
thiserror = "1.0.58"
tokio = { version = "*", features = ["rt", "net", "io-util", "time", "sync", "rt-multi-thread"] }
mio = { version = "0.8.8", features = ["log"] }
embedded-svc = { version = "0.27.1", features = ["experimental"] }
embedded-hal = "1.0.0"
tokio-tungstenite = "0.21.0"
futures-util = { version = "0.3.30" }

[build-dependencies]
embuild = "0.31.3"

[profile.dev.package."*"]
opt-level = "z"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }
