[package]
name = "simple-blocking-example"
version = "0.1.0"
authors = ["Ghislaine Laios <laios54@pm.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.1", default-features = false }
heapless = { version = "0.8.0", features = ["serde"] }
once_cell = "1.19.0"
serde = "1.0.197"
config = "0.14.0"
ads1293-demo = { version = "0.1.0", path = "../.." }
embedded-hal = "1.0.0"
thiserror = "1.0.58"
normal-data = { version = "0.1.0", path = "../normal-data" }
esp-idf-sys = "0.34.1"
serde_json = "1.0.115"
bno055 = { version = "0.4.0", features = ["std", "serde"] }
smallvec = { version = "1.13.2", features = ["serde"] }
embedded-hal-bus = { version = "0.2.0", features = ["std"] }
mlx9061x = { git = "https://github.com/Radiator-Labs/mlx9061x-rs.git", version = "0.2.1" }

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }

[patch.crates-io]
# esp-idf-svc = { path = "../../../../../EspRs/esp-idf-svc" }
# embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git" }
